--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -35,7 +35,7 @@
       
       <section class = "right-col flex-column">
         <div class = "title flex font-1">
-          <span>WHO TO FOLLOW</span>          
+          <span class="title-span">WHO TO FOLLOW</span>          
         </div>
         <div  class="who-to-section flex-column flex">
         <% @tofollow_users.each do |user| %>          
