--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,10 @@
 @import "bulma";
 
 //  general
+img {
+  object-fit: cover;
+}
+
 .color-1 {
   color: #667b90;
 }
@@ -54,9 +58,19 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: gray;
-  object-fit: cover;
+  object-fit: scale-down;
   padding: 0.1px;
   overflow: hidden;
+}
+
+.style-image {
+  width: 4rem;
+  height: 4rem;
+}
+
+.style-cover {
+  width: 100%;
+  height: 15rem;
 }
 
 .flex-row {
