--- a/app/views/layouts/_followings.html.erb
+++ b/app/views/layouts/_followings.html.erb
@@ -7,7 +7,7 @@
   <article class="opinion-story flex-row">
    <div class="opinion-profile img-div">
     <% if user.photo %>
-    <%= image_tag(user.photo_url.to_s) %> 
+    <%= image_tag(user.photo_url.to_s, :class => "style-image") %> 
     <% end %>
    </div>
    <div class = "opinion-body font-fam w-100">
