--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -17,7 +17,7 @@
             <article class="opinion-story flex-row">
             <div class="opinion-profile img-div">
             <% if opinion.author.photo %>
-            <%= image_tag(opinion.author.photo_url.to_s) %> 
+            <%= image_tag(opinion.author.photo_url.to_s, :class => "style-image") %> 
             <% end %>
            </div>
              <div class = "opinion-body font-fam w-100">
