--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -6,7 +6,7 @@
   
   <picture class = "back-img">
     <% if @user.coverimage %>
-      <%= image_tag(@user.coverimage_url.to_s, width: "100%", height: "100%") %>       
+      <%= image_tag(@user.coverimage_url.to_s, :class => "style-cover") %>       
     <% end %>
     <%= link_to 'Edit' %>
   </picture>  
