--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,14 +6,13 @@
   
   <picture class = "back-img">
     <% if @user.coverimage %>
-      <%= image_tag(@user.coverimage_url.to_s, width: "100%", height: "15rem") %>       
+      <%= image_tag(@user.coverimage_url.to_s, :class => "style-cover") %>       
     <% end %>
     <%= link_to 'Edit' %>
   </picture>  
   
   <%= render './layouts/frontmenu'%>
-  <%= render 'usershowopinion'%>
-  
+  <%= render 'usershowopinion'%>  
   
 </section>
 
