--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,12 @@ a:hover {
   font-size: 2rem;
 }
 
+.iconify {
+  font-weight: normal;
+  font-style: normal;
+  display: block;
+}
+
 .img-div {
   width: 100%;
   height: 100%;
@@ -309,6 +315,10 @@ a:hover {
             display: inline;
             justify-content: start;
           }
+
+          .field_with_errors {
+            width: 100%;
+          }
         }
       }
     }
@@ -380,6 +390,7 @@ a:hover {
 
           .iconify {
             font-size: 2rem;
+
           }
         }
 
