--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    
   </head>
 
   <body>
@@ -62,7 +62,7 @@
     <% end %>
     
     <%= yield %>    
-  
+    <script src="https://code.iconify.design/2/2.0.0-rc.3/iconify.min.js"></script>
   </body>
 
 </html>
