--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -42,7 +42,7 @@
           <article class="who-to-story flex-row">
            <div class="who-to-profile img-div">
             <% if user.photo %>
-            <%= image_tag(user.photo_url.to_s) %> 
+            <%= image_tag(user.photo_url.to_s, :class => "style-image") %> 
             <% end %>
            </div>
            <div class = "who-to-body">
