--- a/app/views/users/_usershowright.html.erb
+++ b/app/views/users/_usershowright.html.erb
@@ -2,18 +2,20 @@
   <div class="show-profile" >
         <div class="show-article flex flex-column">
             <div class="photo-wrapper flex-row flex">
-              <% if @current_user_followings.include?(@user) %>
-                <a href="<%= unfollow_user_path(@user) %>">        
-                  <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
-                </a>
-              <% else %>
-                <a href="<%= follow_user_path(@user) %>">
-                    <span class="iconify" data-icon="carbon:add-alt" data-inline="false"></span>
-                </a>
+              <% if @user != current_user %>
+                <% if @current_user_followings.include?(@user) %>
+                  <a href="<%= unfollow_user_path(@user) %>">        
+                    <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+                  </a>
+                <% else %>
+                  <a href="<%= follow_user_path(@user) %>">
+                      <span class="iconify" data-icon="carbon:add-alt" data-inline="false"></span>
+                  </a>
+                <% end %>
               <% end %>             
               <div class="user-img"> 
                 <% if @user.photo %>
-                  <%= image_tag(@user.photo_url.to_s, width: "100%", height: "100%") %> 
+                  <%= image_tag(@user.photo_url.to_s, :class => "style-image") %> 
                 <% end %>
               </div>
               <span class="iconify" data-icon="ion:list-circle-outline" data-inline="false"></span>
@@ -60,16 +62,17 @@
         </div>
                       
       </div>
-      <% if @current_user_followings.include?(user) %>
-        <a href="<%= unfollow_user_path(user) %>">        
-          <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
-        </a>
-      <% else %>
-        <a href="<%= follow_user_path(user) %>">
-          <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
-        </a>
+      <% if user != current_user %>
+        <% if @current_user_followings.include?(user) %>
+          <a href="<%= unfollow_user_path(user) %>">        
+            <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+          </a>
+        <% else %>
+          <a href="<%= follow_user_path(user) %>">
+            <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
+          </a>
+        <% end %>
       <% end %>
-      
     </article>
     <% end %>
   <% end %>
