--- a/app/views/layouts/_followers.html.erb
+++ b/app/views/layouts/_followers.html.erb
@@ -17,11 +17,11 @@
     </div>
     <% if @current_user_followings.include?(user) %>
       <a href= "<%= unfollow_user_path(user) %>">        
-        <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+        <span class="iconify font-1p5 unfollow" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
       </a>
     <% else %>
       <a href= "<%= follow_user_path(@user) %>">
-        <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
+        <span class="iconify font-1p5 follow" data-icon="carbon:add-alt" data-inline="false"></span>
       </a>
     <% end %>      
   </article>
