--- a/app/views/users/_usershowright.html.erb
+++ b/app/views/users/_usershowright.html.erb
@@ -5,11 +5,11 @@
               <% if @user != current_user %>
                 <% if @current_user_followings.include?(@user) %>
                   <a href="<%= unfollow_user_path(@user) %>">        
-                    <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+                    <span class="iconify font-1p5 unfollow" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
                   </a>
                 <% else %>
                   <a href="<%= follow_user_path(@user) %>">
-                      <span class="iconify" data-icon="carbon:add-alt" data-inline="false"></span>
+                      <span class="iconify follow" data-icon="carbon:add-alt" data-inline="false"></span>
                   </a>
                 <% end %>
               <% end %>             
@@ -65,11 +65,11 @@
       <% if user != current_user %>
         <% if @current_user_followings.include?(user) %>
           <a href="<%= unfollow_user_path(user) %>">        
-            <span class="iconify font-1p5" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
+            <span class="iconify font-1p5 unfollow" data-icon="grommet-icons:subtract-circle" data-inline="false"></span>        
           </a>
         <% else %>
           <a href="<%= follow_user_path(user) %>">
-            <span class="iconify font-1p5" data-icon="carbon:add-alt" data-inline="false"></span>
+            <span class="iconify font-1p5 follow" data-icon="carbon:add-alt" data-inline="false"></span>
           </a>
         <% end %>
       <% end %>
