few changes on stylings

--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -12,7 +12,7 @@
         <%= render './layouts/opinion' %>
         
         <section class="opinions-section flex-column flex sticky-top">
-           <span class="opinions-title font-fam">4 NEW OPINION</span>
+           <span class="opinions-title font-fam">ALL OPINIONS</span>
            <% @opinions.each do |opinion| %>
             <article class="opinion-story flex-row">
             <div class="opinion-profile img-div">
